chore: rename to telegram-slskd-local-bot
- Rename project from music-downloader to telegram-slskd-local-bot
- Bot name: slskd-importer, handle: @slskdimporterbot
- Update Docker image to drumsergio/telegram-slskd-local-bot
- Add AGENTS.md in LynxPrompt style
- Update all references in README, pyproject.toml, workflows, Dockerfile

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,11 @@
 # ==============================================================================
-# Music Downloader — Environment Variables
+# telegram-slskd-local-bot — Environment Variables
 # ==============================================================================
 # Copy this file to .env and fill in your values:
 #   cp .env.example .env
 #
 # For the full reference table, see the README:
-#   https://github.com/GeiserX/music-downloader#environment-variables
+#   https://github.com/GeiserX/telegram-slskd-local-bot#environment-variables
 # ==============================================================================
 
 # ==============================================================================
