--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -5,7 +5,7 @@ on:
     tags:
       - 'v*.*.*'
     branches:
-      - master
+      - main
     paths:
       - 'Dockerfile'
       - 'requirements.txt'
@@ -19,7 +19,7 @@ on:
         type: string
 
 env:
-  DOCKER_IMAGE: drumsergio/music-downloader
+  DOCKER_IMAGE: drumsergio/telegram-slskd-local-bot
 
 jobs:
   build-and-push:
@@ -53,7 +53,7 @@ jobs:
             type=semver,pattern={{version}}
             type=semver,pattern={{raw}}
             type=raw,value=${{ github.event.inputs.tag }},enable=${{ github.event.inputs.tag != '' }}
-            type=raw,value=latest,enable=${{ github.ref == 'refs/heads/master' }}
+            type=raw,value=latest,enable=${{ github.ref == 'refs/heads/main' }}
             type=sha,prefix={{branch}}-,enable=${{ github.ref != 'refs/heads/master' && !startsWith(github.ref, 'refs/tags/') }}
 
       - name: Build and push Docker image
