feat: add FLAC authenticity analysis via spectral cutoff detection
Analyze downloaded FLAC files for losslessness before user approval.
Uses Welch's PSD method to detect lossy-to-lossless transcodes by
finding sharp energy drops above 14kHz. Verdicts (AUTHENTIC, WARNING,
SUSPICIOUS, FAKE) are shown inline in the download preview message.

Also adds send_document fallback for edge cases where send_audio fails,
and improves the large-file message with quality info.

New deps: numpy, scipy, soundfile (+ libsndfile1 in Docker image).

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "telegram-slskd-local-bot"
-version = "0.3.5"
+version = "0.4.0"
 description = "Automated music discovery and download via Telegram bot. Resolves metadata from Spotify, searches and downloads FLAC from Soulseek (slskd), and organizes your library."
 readme = "README.md"
 requires-python = ">=3.11"
@@ -33,6 +33,9 @@ dependencies = [
     "uvicorn>=0.32.0",
     "python-dotenv>=1.0.1",
     "httpx>=0.28.0",
+    "numpy>=1.26.0",
+    "scipy>=1.12.0",
+    "soundfile>=0.12.1",
 ]
 
 [project.optional-dependencies]
